--- a/samplechapter/sample1.tex
+++ b/samplechapter/sample1.tex
@@ -9,3 +9,20 @@
 \begin{equation}
 	f(x) = \sum_{n=1}^{\infty} b_n \sin(nx)
 \end{equation}
+
+\begin{table}[htbp]
+	\begin{center}
+		\caption{表のタイトル}
+	    \label{table:sample_table}
+		\begin{tabular}{cr}
+			\hline
+			a & b\\
+			\hline
+			A & 0.4\\
+			B & 0.9\\
+			\hline
+		\end{tabular}
+	\end{center}
+\end{table}
+
+
