--- a/document.tex
+++ b/document.tex
@@ -1,4 +1,5 @@
-\documentclass[uplatex,a4paper,11pt,oneside,report]{jsbook}
+\documentclass[uplatex,a4paper,11pt,oneside]{jsbook}
+\pagestyle{headings}
 \usepackage{amsmath}
 \usepackage[dvipdfmx]{graphicx}
 \graphicspath{{assets/}}
