Use hyperref package

--- a/document.tex
+++ b/document.tex
@@ -1,8 +1,11 @@
 \documentclass[uplatex,a4paper,11pt,oneside]{jsbook}
-\pagestyle{headings}
 \usepackage{amsmath}
 \usepackage[dvipdfmx]{graphicx}
+\usepackage[dvipdfmx,hidelinks]{hyperref}
+\usepackage{pxjahyper}
+
 \graphicspath{{assets/}}
+\pagestyle{headings}
 
 % main
 \begin{document}
