Add 'report' flag

--- a/document.tex
+++ b/document.tex
@@ -1,4 +1,4 @@
-\documentclass[uplatex,a4paper,11pt,oneside]{jsbook}
+\documentclass[uplatex,a4paper,11pt,oneside,report]{jsbook}
 \usepackage{amsmath}
 \usepackage[dvipdfmx]{graphicx}
 \usepackage[dvipdfmx,hidelinks]{hyperref}
